[gd_scene load_steps=2 format=3 uid="uid://dwppfk34q0tga"]

[ext_resource type="Script" path="res://scripts/upgradepanel.gd" id="1_gmc8b"]

[node name="Upgradepanel" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gmc8b")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Legendary warriors
Heavy damage
Tons of HP
Balanced Tactics"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="DmgUpButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrade Damage"

[node name="HpUpButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrade Health"

[node name="MassUpButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrade Weight"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="EvolveButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Evolve"

[connection signal="pressed" from="VBoxContainer/DmgUpButton" to="." method="_on_dmg_up_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HpUpButton" to="." method="_on_hp_up_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MassUpButton" to="." method="_on_mass_up_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/EvolveButton" to="." method="_on_evolve_button_pressed"]
